ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rootstock-client-gateway-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.hostname
    http:
      paths:
      - backend:
          service:
            name: rootstock-client-gateway
            port:
              number: 443
        path: /
        pathType: Prefix
